# template-fullstack-mono

./: .agentic-core-version.json  .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml
sdd/: README.md
server/: .env.example  Dockerfile  Makefile  README.md  config.py  pyproject.toml
server/api/: __init__.py  app.py  dependencies.py  router.py
server/contexts/: __init__.py
server/contexts/admin/: __init__.py
server/contexts/admin/application/: __init__.py  services.py
server/contexts/admin/infrastructure/: __init__.py  models.py  repository.py
server/contexts/admin/presentation/: __init__.py  router.py  schemas.py
server/contexts/bidding/application/: services.py
server/contexts/bidding/domain/: enums.py  ports.py
server/contexts/bidding/infrastructure/: models.py  repository.py
server/contexts/bidding/presentation/: router.py  schemas.py
server/contexts/identity/: bootstrap.py
server/contexts/support/: bootstrap.py
server/contexts/vehicles/: bootstrap.py
server/data/: README.md
server/shared/: __init__.py
server/shared/domain/: normalizers.py  vehicle_lifecycle.py
server/shared/http/: __init__.py  pagination.py
server/shared/infrastructure/: __init__.py  database.py  environment.py  errors.py  security.py
server/tests/: conftest.py  test_admin_dealers_link_header_integration.py  test_admin_dealers_rbac.py  test_admin_dealers_totals_and_filter_link.py  test_api_guard_dealer_creation.py  test_bidding_winner_selection.py  test_dealer_admin_transitions.py  test_health.py  test_http_pagination_links.py  test_identity_bootstrap.py  test_invariant_role_dealer_status.py  test_password_reset_request.py  test_pending_dealers_pagination.py  test_repository_guard_dealer_status.py  test_vehicle_lifecycle_state_machine.py  test_vehicle_options_integration.py
server/tests/support/: test_support_storage.py
(+854 files in other folders)
