[project]
name = "template-server"
version = "0.1.0"
description = "Template server service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.43",
  "pymysql==1.1.2",
  "boto3==1.35.99",
  "pydantic-settings==2.10.1",
  "python-jose[cryptography]==3.5.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.0.1",
  "python-multipart==0.0.20",
  "email-validator==2.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "httpx==0.28.1",
  "ruff==0.12.11",
  "mypy==1.11.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "contexts", "shared"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
# Keep mypy aware of the template-style top-level package layout.
python_version = "3.11"
# Target the API surface and its shared/context packages explicitly.
packages = ["api", "contexts", "shared"]
explicit_package_bases = false
mypy_path = "."
namespace_packages = false

# Pragmatic defaults to stabilize checks during alignment work.
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
